feat: cria componente SignInButton

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -52,5 +52,9 @@ $header-height: 5rem;
                 }
             }
         }
+
+        button {
+            margin-left: auto;
+        }
     }
 }
