--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -1,4 +1,4 @@
-.signInButton {
+.sign-in-button {
     height: 3rem;
     border-radius: 3rem;
     background-color: var(--gray-850);
@@ -21,7 +21,7 @@
         margin-right: 1rem;
     }
 
-    svg.closeIcon {
+    &__close-icon {
         margin-left: 1rem;
     }
 
