feat: cria botão de subscribe

--- a/src/styles/modules/home.module.scss
+++ b/src/styles/modules/home.module.scss
@@ -1,4 +1,5 @@
 @import "../Layout/container";
+@import "../Layout/utils";
 
 .content-container {
     @extend %container, %flex-center-between;
@@ -33,6 +34,10 @@
                 color: var(--cyan-500);
                 font-weight: bold;
             }
+        }
+
+        button {
+            margin-top: 2.5rem;
         }
     }
 }
