--- a/src/styles/modules/home.module.scss
+++ b/src/styles/modules/home.module.scss
@@ -1,5 +1,5 @@
-@import "../Layout/container";
-@import "../Layout/utils";
+@import "../layout/container";
+@import "../layout/utils";
 
 .content-container {
     @extend %container, %flex-center-between;
