--- a/src/components/subscribeButton/styles.module.scss
+++ b/src/components/subscribeButton/styles.module.scss
@@ -17,4 +17,17 @@
     &:hover {
         filter: brightness(0.8);
     }
+
+    &__icon-loading {
+        animation: spin infinite 5s linear;
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
